monitoring/prometheus/alertmanager/alertmanager-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9093"
  name: alertmanager
  namespace: monitoring
  labels:
    app.kubernetes.io/name: "alertmanager"
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: "alertmanager"
  ports:
    - name: alertmanager
      port: 9093
      targetPort: web
