monitoring/prometheus/alertmanager/alertmanager-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: alertmanager.realai-inc.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager
          servicePort: alertmanager
